# GameEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/shaders/: 3.3.shader.fs  3.3.shader.vs  3.3.shader2.fs  text.shader.fs  text.shader.vs
include/: Geometry.h  Texture.h  Window.h
include/glad/: glad.h
include/shaders/: shader.h
src/: Geometry.cpp  Texture.cpp  Window.cpp  glad.c  main.cpp  shader.cpp  stb_image.cpp
